--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -48,7 +48,7 @@
 				<ul>
 					<li><a href="#Immigration">Visa and Work Permit</a></li>
 					<li><a href="#Housing">Housing</a></li>
-					<li><a href="#Electricity">Electricity</a></li>
+					<li><a href="#Utilities">Water, Electricity, and Internet</a></li>
 					<li><a href="#Food">Food</a></li>
 					<li><a href="#Language">Language and Social Etiquette</a></li>
 					<li><a href="#Money">Currency and Money</a></li>
@@ -80,18 +80,34 @@
 			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
 		</section>
 
-		<section id="Electricity">
-			<h2>Electricity</h2>
+		<section id="Utilities">
+			<h2>Water, Electricity, and Internet</h2>
+			<h3>Water</h3>
+			<p>Tap water in Kenya is not safe to drink, but bathing and brushing teeth with it is fine. My housemates and I bought a 9 L Unilever Pureit Excella filter to make the tap water drinkable, and we like it.</p>
+
+			<h3>Electricity</h3>
 			<p>Kenya's electrical grid connects more than half of the country's residents, including almost everywhere in Nairobi, and the majority of energy is renewable, coming primarily from hydroelectric and geothermal sources.</p>
 			
-			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances before you bring them to Kenya, especially high-power ones like blenders or blowdriers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
+			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances' power  before you bring them to Kenya, especially high-power ones like blenders or blowdriers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
 
 			<figure>
 				<img class="img-center" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/UK_BS_1363_plug_and_socket_%28IEC_Type_G%29.png" alt="UK BS 1363 plug and socket (IEC Type G)">
-				<figcaption>Source: Ukpluggerrr, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons</figcaption>
+				<figcaption>Source: Ukpluggerrr, <a rel="external" target="_blank" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/File:UK_BS_1363_plug_and_socket_(IEC_Type_G).png">Wikimedia Commons</a></figcaption>
+			</figure>
+
+			<figure>
+				<img class="img-center" src="blog-posts/psu-label.jpg" alt="Power supply label">
+				<figcaption>Source: Fizz, <a rel="external" target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>, via <a rel="external" target="_blank" href="https://superuser.com/a/977605">SuperUser</a>. If the power supply label on your appliance lists the input as including 240 VAC or V~ and 50 Hz, like this one does, then it will work in Kenya. If it instead reads something like "INPUT: 120 VAC 60 Hz," then it will not.</figcaption>
 			</figure>
 
 			<p>The Nairobi grid is decently reliable. Depending on where you are in the city, power outages can occur for a few hours every few days. Many nicer establishments and homes have backup diesel generators that kick on during power cuts.</p>
+
+			<h3>Internet</h3>
+			<p>In Nairobi, internet speed rivals that of US cities. Nonetheless, many Africans in the age of COVID prefer voice calls with no video.</p>
+
+			<p>Because most houses are built with thick, cinderblock walls, indoor Wi-Fi networks lack the range that you may be used to in wood-framed US homes. Depending on where you live, you may want to buy multiple routers or repeaters and build a mesh network in your home.</p>
+
+			<p>I'll discuss cellular network in a later section, but suffice to say that it is affordable and decently reliable in most cities and towns in Kenya.</p>
 		</section>
 
 		<section id="Food">
