--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -45,62 +45,62 @@
 
 		<section class="odd">
 			<h2>Swaying</h2>
-			<p>Stand on something precarious, like a stool, and rehearse your speech.</p>
+			<p>Stand on something precarious, like a stool, and rehearse your speech. The difficulty of balancing will keep your mind focused on standing still.</p>
 		</section>
 
 		<section class="even">
 			<h2>Pacing or Nervous Feet</h2>
-			<p>Rehearse with heavy objects on your feet.</p>
+			<p>Rehearse with heavy objects on your feet. Whenever you try to lift your foot, the weight will provide an instant reminder not to do that.</p>
 		</section>
 
 		<section class="odd">
 			<h2>Nervous Hands</h2>
-			<p>Rehearse while holding dumbbells, or other heavy objects, in your hands.</p>
+			<p>Rehearse while holding dumbbells, or other heavy objects, in your hands. Holding something heavy will keep your mind focused on keeping your hands still by your sides.</p>
 		</section>
 
 		<section class="even">
 			<h2>Poor Enunciation</h2>
-			<p>Rehearse while biting down on a wooden pencil with your back molars.</p>
+			<p>Rehearse while biting down on a wooden pencil with your back molars. The pencil will force every movement of your tongue to be strategic and intentional, developing muscle memory that will help you enunciate more clearly.</p>
 		</section>
 
 		<section class="odd">
 			<h2>Insufficient Volume or Frequently Losing Your Voice</h2>
-			<p>Rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall. Try to relax your throat.</p>
+			<p>Rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall. Try to relax your throat. Doing so forces you to rely more your diaphragm, taking pressure off of your throat and helping you project your voice more effectively.</p>
 		</section>
 
 		<section class="even">
 			<h2>Frequently Losing Your Voice</h2>
-			<p>Often, this is caused by relying on the throat instead of the diaphragm to increase volume. In addition to the above projection exercise, swallow a tablespoon (or some other overwhelming quantity) of honey before performing. Try to keep the honey in your throat from vibrating too much.</p>
+			<p>Often, this is caused by relying on the throat instead of the diaphragm to increase volume. In addition to the above projection exercise, swallow a tablespoon of honey before performing. Try to keep the honey in your throat from vibrating. The honey will coat your throat and provide temporary relief, and minimizing its vibration will help you pay attention to how much you are relying on your throat to increase volume instead of your diaphragm.</p>
 		</section>
 
 		<section class="odd">
 			<h2>Monotone Voice, Invariant Vocal Pattern, or Sounding Rehearsed</h2>
-			<p>Recite each line using three drastically different vocal patterns, even if some of them are ridiculous.</p>
+			<p>Recite each line using three drastically different vocal patterns, even if some of them are ridiculous. This will help your brain break subconcious habits in your cadence. As a bonus, you may find a new way of speaking a line that you want to keep.</p>
 		</section>
 
 		<section class="even">
 			<h2>Repetitive or Insufficient Hand Gestures</h2>
-			<p>Recite each line using three different hand gestures, even if some of them don't make sense. Remember that there are generally three binary choices for each hand gesture: one or two hands, palms facing up or down, and hands inside or outside the frame of the torso.</p>
+			<p>Recite each line using three different hand gestures, even if some of them don't make sense. This will help your brain break subconcious habits in your gesturing. Remember that there are generally three binary choices for each hand gesture: one or two hands, palms facing up or down, and hands inside or outside the frame of the torso. </p>
 		</section>
 
 		<section class="odd">
 			<h2>Forgetting Lines</h2>
-			<p>Recite the first line. Then recite the first line followed by the second line. Then recite the first and second lines followed by the third line. Repeat the pattern. Whenever you forget a line, repeat it three times, then start over from the beginning.</p>
+			<p>Recite the first line. Then recite the first line followed by the second line. Then recite the first and second lines followed by the third line. Repeat the pattern. Whenever you forget a line, repeat it three times, then start over from the beginning. This method is optimized for helping you remember lines by creating mental links between them.</p>
 		</section>
 
 		<section class="even">
 			<h2>Insufficient Eye Contact</h2>
-			<p>Rehearse while standing uncomfortably close to a mirror, staring into your own eyes. Then, rehearse while standing uncomfortably close to a friend, staring into their eyes the entire time.</p>
+			<p>Rehearse while standing uncomfortably close to a mirror, staring into your own eyes. Then, rehearse while standing uncomfortably close to a friend, staring into their eyes the entire time. The exposure therapy should help you get used to eye contact with an audience.</p>
 		</section>
 
 		<section class="odd">
 			<h2>Insufficient Eye Contact Due to Staring at Slides</h2>
-			<p>Allow yourself exactly one glance at each slide. Assign one spoken line per slide and glance at the slide only during that line.</p>
+			<p>Allow yourself exactly one glance at each slide. Assign one spoken line per slide and glance at the slide only during that line. Not just the words you speak, but also the movement of your body is a memorized part of your performance.</p>
 		</section>
 
 		<section class="even">
 			<h2>Minor Stuttering</h2>
-			<p>Do each of the following consecutively, not simultaneously: stop speaking, close your eyes, take a breath, imagine yourself saying the line without stuttering, then say the line.</p>
+			<p>Do each of the following consecutively, not simultaneously: stop speaking, close your eyes, take a breath, imagine yourself saying the line without stuttering, then say the line. Visualizing success is a tried-and-true cognitive trick to achieving success.</p>
 		</section>
 
 		<section class="odd">
@@ -110,12 +110,12 @@
 
 		<section class="even">
 			<h2>Talking Too Fast</h2>
-			<p>While watching a stopwatch, recite each line by speaking one word every five seconds.</p>
+			<p>While watching a stopwatch, recite each line by speaking one word every five seconds. This will help break the hurried speaking pattern and allow you to invent a new, more paced cadence.</p>
 		</section>
 
 		<section class="odd">
 			<h2>Standing Behind a Lectern</h2>
-			<p>The only reason to stand behind a lectern is if you need to speak into a microphone that is mounted in the lectern. Stand in front of the lectern. If you have notes, rehearse until you don't need them. If you need to change a slide, carry a clicker or mouse or walk back to the lectern when you need to advance.</p>
+			<p>The only reason to stand behind a lectern is if you need to speak into a microphone that is mounted in the lectern. Instead, stand in front of the lectern. If you have notes, rehearse until you don't need them. If you need to change a slide, carry a clicker or mouse or walk back to the lectern when you need to advance.</p>
 		</section>
 
 		<section class="even">
@@ -130,7 +130,7 @@
 
 		<section class="even">
 			<h2>Getting Distracted</h2>
-			<p>Ask a friend to help you do a "distraction round." While you perform for them, have your friend talk loudly over you, play music, dance, and generally distract you from your performance. Force yourself to continue no matter what.</p>
+			<p>Ask a friend to help you do a "distraction round." While you perform for them, have your friend talk loudly over you, play music, dance, and generally distract you from your performance. Force yourself to continue no matter what. Rehearsing with over-the-top distractions prepares you to deal with more reasonable ones during your full performance.</p>
 		</section>
 
 		<section class="odd">
@@ -140,7 +140,7 @@
 
 		<section class="even">
 			<h2>Lack of Clear Distinction Between Points or Arguments</h2>
-			<p>Signpost. When transitioning between points, summarize, then introduce your next topic. For example, "Now that we have a good understanding of the problem, let's explore some solutions."</p>
+			<p>Signpost. When transitioning between points, summarize, then introduce your next topic. For example, "Now that we have a good understanding of the problem, let's explore some solutions." Signposting helps your audience mentally organize the information you give them.</p>
 		</section>
 	</main>
 	
