--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -335,9 +335,9 @@
 			
 			<p>If you find all those words confusing, their branding isn't top notch, but there is some logic to all of those options, if not their naming.</p>
 
-			<p>You can only use M-Pesa if you have a Safaricom SIM card. Thankfully, you can buy a SIM card at any Safaricom store building for about $1. You will need your passport to register.</p>
+			<p>To get M-Pesa, go to a Safaricom store building with your physical passport, not a soft copy, and pay $1 for a Safaricom SIM card. When you insert the SIM card into your phone, you will need to unlock it with a special, four-digit SIM PIN provided by Safaricom on the plastic case containing the SIM card. Doing so will install an app on your phone labeled "Safaricom" or "SIM Toolkit." That app will allow you to activate your M-Pesa account and, optionally, deactivate your SIM PIN so you don't have to enter it whenever you turn on your phone.</p>
 
-			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit too.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit too. I use the official <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a> app to pay for things with M-Pesa.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
