gallery hover effects and css cleanup

--- a/capstone.html
+++ b/capstone.html
@@ -20,6 +20,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
+	<link rel="stylesheet" type="text/css" href="project-pages/capstone.css">
 </head>
 <body>
 	<header>
@@ -78,41 +79,17 @@
 
 		<p>To learn more about the project, <a href="project-pages/capstone-report.pdf" download target="_blank">read our report</a>. All of our software is open source on <a aria-label="GitHub repository" rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
 
-		<img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
 		<div class="gallery">
-			<a href="project-pages/capstone-gal00.jpg" target="_blank">
-				<img src="project-pages/capstone-gal00.jpg" alt="A flying quadcopter being observed by a group of people">
-			</a>
-			<a href="project-pages/capstone-gal01.jpg" target="_blank">
-				<img src="project-pages/capstone-gal01.jpg" alt="MAPSAN team picture">
-			</a>
-			<a href="project-pages/capstone-gal02.jpg" target="_blank">
-				<img src="project-pages/capstone-gal02.jpg" alt="Working on computer code">
-			</a>
-			<a href="project-pages/capstone-gal03.jpg" target="_blank">
-				<img src="project-pages/capstone-gal03.jpg" alt="Quadcopter in the sky">
-			</a>
-			<a href="project-pages/capstone-gal04.jpg" target="_blank">
-				<img src="project-pages/capstone-gal04.jpg" alt="People discussing near a quadcopter">
-			</a>
-			<a href="project-pages/capstone-gal05.jpg" target="_blank">
-				<img src="project-pages/capstone-gal05.jpg" alt="Quadcopter on the ground">
-			</a>
-			<a href="project-pages/capstone-gal06.jpg" target="_blank">
-				<img src="project-pages/capstone-gal06.jpg" alt="MAPSAN teammate smiling next to the quadcopter">
-			</a>
-			<a href="project-pages/capstone-gal07.jpg" target="_blank">
-				<img src="project-pages/capstone-gal07.jpg" alt="Multiple people working on computer code">
-			</a>
-			<a href="project-pages/capstone-gal08.jpg" target="_blank">
-				<img src="project-pages/capstone-gal08.jpg" alt="Quadcopter being piloted">
-			</a>
-			<a href="project-pages/capstone-gal09.jpg" target="_blank">
-				<img src="project-pages/capstone-gal09.jpg" alt="Computer running code">
-			</a>
-			<a href="project-pages/capstone-gal10.jpg" target="_blank">
-				<img src="project-pages/capstone-gal10.jpg" alt="CAD of the quadcopter">
-			</a>
+			<img src="project-pages/capstone-gal0.jpg" id="img-capstone-gal0" alt="A flying quadcopter being observed by a group of people">
+			<img src="project-pages/capstone-gal1.jpg" id="img-capstone-gal1" alt="MAPSAN team picture">
+			<img src="project-pages/capstone-gal2.jpg" id="img-capstone-gal2" alt="Working on computer code">
+			<img src="project-pages/capstone-gal3.jpg" id="img-capstone-gal3" alt="People discussing near a quadcopter">
+			<img src="project-pages/capstone-gal4.jpg" id="img-capstone-gal4" alt="Quadcopter on the ground">
+			<img src="project-pages/capstone-gal5.jpg" id="img-capstone-gal5" alt="MAPSAN teammate smiling next to the quadcopter">
+			<img src="project-pages/capstone-gal6.jpg" id="img-capstone-gal6" alt="Multiple people working on computer code">
+			<img src="project-pages/capstone-gal7.jpg" id="img-capstone-gal7" alt="Quadcopter being piloted">
+			<img src="project-pages/capstone-gal8.jpg" id="img-capstone-gal8" alt="Computer running code">
+			<img class="img-full-width" id="main-img" alt="A drone piloted by one of three men in a field">
 		</div>
 	</main>
 
