--- a/dfl.html
+++ b/dfl.html
@@ -65,7 +65,7 @@
 
 		<section>
 			<h2>Problem Definition</h2>
-			<p><img class="img-full-width" src="project-pages/dfl-bucket.jpg" alt="Diagram of an excavator bucket."></p>
+			<p><img class="img-center" src="project-pages/dfl-bucket.jpg" alt="Diagram of an excavator bucket."></p>
 			<p>Lifting linearization is a methodology for representing a nonlinear dynamical system with a linear dynamic model in a high-dimensional space. Underpinned by Koopman operator theory, nonlinear systems represented with supernumerary state variables behave more linearly in the lifted space. The method has recently been applied to various robotics and automation challenges, including active learning, soft robotics, human-robot interaction, power systems, and mission planning. More broadly, deep learning has proven a valuable tool for lifting linearization techniques.</p>
 
 			<p>The original Koopman Operator has two major limitations:</p>
