--- a/service.html
+++ b/service.html
@@ -19,6 +19,7 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="service/service.css">
 </head>
 <body>
 	<header>
@@ -38,56 +39,24 @@
 		<section>
 			<h2>Clubes de Ciencia</h2>
 
-			<img class="img-full-width" src="service/teaching-2.jpg" alt="Me teaching a class using a projector">
 			<div class="gallery">
-				<a href="service/teaching-0.jpg" target="_blank">
-					<img src="service/teaching-0.jpg" alt="Me talking to a small group of students">
-				</a>
-				<a href="service/teaching-1.jpg" target="_blank">
-					<img src="service/teaching-1.jpg" alt="Me giving a lecture to a class">
-				</a>
-				<a href="service/teaching-3.jpg" target="_blank">
-					<img src="service/teaching-3.jpg" alt="Me teaching students how to solder">
-				</a>
-				<a href="service/experiment-0.jpg" target="_blank">
-					<img src="service/experiment-0.jpg" alt="Students learning to solder">
-				</a>
-				<a href="service/experiment-1.jpg" target="_blank">
-					<img src="service/experiment-1.jpg" alt="Students using an oscilloscope">
-				</a>
-				<a href="service/experiment-2.jpg" target="_blank">
-					<img src="service/experiment-2.jpg" alt="An oscilloscope running">
-				</a>
-				<a href="service/sensor-0.jpeg" target="_blank">
-					<img src="service/sensor-0.jpeg" alt="Student blowing into a sensor">
-				</a>
-				<a href="service/sensor-1.jpeg" target="_blank">
-					<img src="service/sensor-1.jpeg" alt="Student holding a sensor to an exhaust pipe">
-				</a>
-				<a href="service/sensor-2.jpg" target="_blank">
-					<img src="service/sensor-2.jpg" alt="Students testing sensor in a restroom">
-				</a>
-				<a href="service/sensor-3.jpeg" target="_blank">
-					<img src="service/sensor-3.jpeg" alt="A sensor next to an exhaust pipe">
-				</a>
-				<a href="service/sensor-4.jpeg" target="_blank">
-					<img src="service/sensor-4.jpeg" alt="A custom noise sensor">
-				</a>
-				<a href="service/presentation-0.jpg" target="_blank">
-					<img src="service/presentation-0.jpg" alt="Students giving a presentation on air pollution">
-				</a>
-				<a href="service/presentation-1.jpg" target="_blank">
-					<img src="service/presentation-1.jpg" alt="Student giving a presentation on engineering tools">
-				</a>
-				<a href="service/presentation-2.jpg" target="_blank">
-					<img src="service/presentation-2.jpg" alt="Student giving a presentation on air pollution with colorful graphics">
-				</a>
-				<a href="service/group-0.jpg" target="_blank">
-					<img src="service/group-0.jpg" alt="Large group of students and instructors">
-				</a>
-				<a href="service/group-1.jpg" target="_blank">
-					<img src="service/group-1.jpg" alt="My class">
-				</a>
+				<img src="service/teaching-0.jpg" id="img-teaching-0" alt="Me talking to a small group of students">
+				<img src="service/teaching-1.jpg" id="img-teaching-1" alt="Me giving a lecture to a class">
+				<img src="service/teaching-3.jpg" id="img-teaching-3" alt="Me teaching students how to solder">
+				<img src="service/experiment-0.jpg" id="img-experiment-0" alt="Students learning to solder">
+				<img src="service/experiment-1.jpg" id="img-experiment-1" alt="Students using an oscilloscope">
+				<img src="service/experiment-2.jpg" id="img-experiment-2" alt="An oscilloscope running">
+				<img src="service/sensor-0.jpg" id="img-sensor-0" alt="Student blowing into a sensor">
+				<img src="service/sensor-1.jpg" id="img-sensor-1" alt="Student holding a sensor to an exhaust pipe">
+				<img src="service/sensor-2.jpg" id="img-sensor-2" alt="Students testing sensor in a restroom">
+				<img src="service/sensor-3.jpg" id="img-sensor-3" alt="A sensor next to an exhaust pipe">
+				<img src="service/sensor-4.jpg" id="img-sensor-4" alt="A custom noise sensor">
+				<img src="service/presentation-0.jpg" id="img-presentation-0" alt="Students giving a presentation on air pollution">
+				<img src="service/presentation-1.jpg" id="img-presentation-1" alt="Student giving a presentation on engineering tools">
+				<img src="service/presentation-2.jpg" id="img-presentation-2" alt="Student giving a presentation on air pollution with colorful graphics">
+				<img src="service/group-0.jpg" id="img-group-0" alt="Large group of students and instructors">
+				<img src="service/group-1.jpg" id="img-group-1" alt="My class">
+				<img class="img-full-width" id="main-img" alt="Me teaching a class using a projector">
 			</div>
 
 			<p>Clubes de Ciencia México (CdeCMx) is a non-profit organization that seeks to encourage Mexican students to pursue professional careers in STEM. I volunteer in the summers as an instructor with CdeCMx to teach high school and college students in Mérida how to design, prototype, and deploy custom devices to monitor public health in a city. I partner with a local co-instructor, Rodrigo Gamboa Torres, to construct a curriculum for and teach a week-long class titled "Citizen Science: Monitoring Public Health in Your City."</p>
