--- a/teachbot.html
+++ b/teachbot.html
@@ -87,18 +87,14 @@
 		<section>
 			<h2>Solution</h2>
 			<p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
-			<div class="centered">
-				<img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
-			</div>
+			<img src="project-pages/teachbot-hardware-overview.jpg" class="img-center" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
 			<p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
 		</section>
 
 		<section>
 			<h2>Evaluation</h2>
 			<p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
-			<div class="centered">
-				<img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
-			</div>
+			<img src="project-pages/teachbot-results.jpg" class="img-center" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
 			<p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
 		</section>
 
