teachbot awards update

--- a/teachbot.html
+++ b/teachbot.html
@@ -102,7 +102,8 @@
 		<section>
 			<h2>Moving Forward</h2>
 			<p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm, and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
-			<p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers, and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
+			<p>TeachBot won several awards, including the National Science Foundation Innovation Corps Teams and Fusion grants, First Place at the MIT Mechanical Engineering Research Exhibition, and millions of dollars in grant money from the Advanced Robotics for Manufacturing Institute and others. A prominent Boston start-up incubator offered TeachBot $500,000 in seed funding.</p>
+			<p>We successfully deployed prototypes of the TeachBot system to small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
 			<p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
 		</section>
 	</main>
