--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -127,7 +127,7 @@
 			<ul>
 				<li><a rel="external" target="_blank" href="http://www.abyssiniarestaurantnairobi.com/">Abyssinia</a>: Ethiopian</li>
 				<li><a rel="external" target="_blank" href="http://www.fogogaucho.co.ke/">Fogo Gaucho</a>: Brazilian steakhouse serving nyama choma</li>
-				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Serit Center</a> food court: a mall food court with an open roof and food and beer</li>
+				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Sarit Center</a> food court: a mall food court with an open roof and food and beer</li>
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/W9fDk5rGDx9fkFKs5">Chez Sonia</a>: fancy French restaurant with live music and garden seating</li>
