--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -193,8 +193,8 @@
 						<td>Mzuri</td>
 					</tr>
 					<tr>
-						<td>Mambo</td>
-						<td>What's up?</td>
+						<td>Mambo (vipi)</td>
+						<td>(How are) things?</td>
 						<td>Poa</td>
 					</tr>
 					<tr>
