--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -56,7 +56,7 @@
 
 		<section class="odd">
 			<h2>Nervous Hands</h2>
-			<p>Rehearse while holding dumbbells, or other heavy objects, in your hands. Holding something heavy will keep your mind focused on keeping your hands still by your sides.</p>
+			<p>Rehearse while holding dumbbells or other heavy objects in your hands. Holding something heavy will keep your mind focused on keeping your hands still by your sides.</p>
 		</section>
 
 		<section class="even">
