--- a/service.html
+++ b/service.html
@@ -25,15 +25,17 @@
 <body>
 	<header>
 		<div id="name">NICHOLAS S SELBY</div>
-		<input class="menu-btn" type="checkbox" id="menu-btn">
-		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-		<ul class="menu">
-			<li><a href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT ME</a></li>
-			<li><a href="selected-work.html">SELECTED WORK</a></li>
-			<li><a href="blog.html">BLOG</a></li>
-			<li><a class="active-link" href="service.html">SERVICE</a></li>
-		</ul>
+		<nav>
+			<input class="menu-btn" type="checkbox" id="menu-btn">
+			<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+			<ul class="menu">
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT ME</a></li>
+				<li><a href="selected-work.html">SELECTED WORK</a></li>
+				<li><a href="blog.html">BLOG</a></li>
+				<li><a class="active-link" href="service.html">SERVICE</a></li>
+			</ul>
+		</nav>
 	</header>
 
 	<main>
