--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -39,7 +39,7 @@
 
 	<main>
 		<h1>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h1>
-		<p class="date">Posted on May 24, 2023. Cowritten with a friend.</p>
+		<p class="date">Posted on May 24, 2023. Cowritten with a friend. Updated as I learn more.</p>
 		<figure class="cover">
 			<img src="blog-posts/kenya-cover.jpg" alt="My friends and I on Mount Longonot">
 		</figure>
@@ -59,6 +59,7 @@
 					<li><a href="#Medical">Medical</a></li>
 					<li><a href="#Safety">Safety</a></li>
 					<li><a href="#Leisure">Recreation and Leisure</a></li>
+					<li><a href="#Safaris">Safaris</a></li>
 				</ul>
 			</div>
 		</section>
@@ -461,21 +462,6 @@
 		<section id="Leisure">
 			<h2>Recreation and Leisure</h2>
 
-			<h3>Safaris</h3>
-			<p>In Kiswahili, "safari" literally means "journey" or "trip." I would recommend using a tour company to plan everything. My favorites are <a rel="external" target="_blank" href="https://expeditionsmaasaisafaris.com/">Expeditions</a> and <a rel="external" target="_blank" href="https://bonfireadventures.com/">Bonfire</a>. These are the important variables:</p>
-			<ul>
-				<li><b>Park:</b> The Maasai Mara is the most popular and generally the best option if your goal is to see the most animals, but many other parks are also great, including Amboseli, Naivasha and Nakuru, and Samburu. Nairobi National Park is also a great budget option.</li>
-				<li><b>Guests:</b> The number, age, and nationality of guests affect the price. Safari vans can comfortably seat up to seven passengers plus the driver. Kids' tickets are typically cheaper than adults'. Kenyan residents pay significantly less than foreigners for both the park entrance fees and hotel. However, if you have at least one resident in your party, you can usually get the hotel to extend the resident rate to everyone in the party.</li>
-				<li><b>Vehicle:</b> You can get a regular car, an open-roof safari van, or a Land Cruiser. I prefer the open-roof safari vans because the open roof makes the experience way better and Land Cruisers are needlessly expensive.</li>
-				<li><b>Transportation from Nairobi:</b> You can take public transport, like matatus, to and from the park or pay extra to be picked up in your safari car at your residence in Nairobi and driven to the park. Some particularly wealthy people fly, but they still need a car to pick them up at the arrival airstrip.</li>
-				<li><b>Group vs. Private:</b> Private safaris cost more than joining a group, but the benefit of privacy is that you get to decide how long you want to stay and look at a particular animal rather than negotiating the schedule with other passengers. Sometimes, safarigoers get tunnel vision trying to see the Big Five. Don't get sucked into this. It can be nice to stay and watch the cheetahs for an hour to see if they take off on a hunt. Many residents self-drive, but doing so means you likely won't have access to radio communication with all of the professional drivers in the park constantly telling each other where the animals are.</li>
-				<li><b>Accommodation Location:</b> Some camps are inside the parks, while others are located outside. Camps inside the park are more expensive, but you save time by not having to check in at the entrance gate every day. For some parks, like the Maasai Mara, you may wait at the gate for up to 45 minutes. For others, like Amboseli, checking in will likely take five minutes.</li>
-				<li><b>Accommodation Type:</b> There are generally three types of safari accommodations: regular tents, safari tents, and lodges, in increasing order of expense. Safari tents are my favorite; they are basically hotel rooms, complete with hot running water and electricity, but the walls are made of canvas instead of brick. All the safaris on which I've been provide nice meals and drinking water for free, but they overcharge for other drinks.</li>
-				<li><b>Number of Nights:</b> Most people go on safari for two to three nights. Unless you're going to Nairobi National Park, don't try to make your safari a one-day trip. You'll be exhausted, and you'll spend much of your time traveling to and from the park rather than enjoying the animals. If seeing a hunt or a particularly rare animal is important to you, you should plan to stay for a week or more.</li>
-			</ul>
-
-			<p>In addition to the quoted price, make sure to budget for park entry fees, drinks, snacks that you'll bring with you from Nairobi, souvenirs, and 10% for tips. If you don't want souvenirs, close and lock your car windows as you approach the gate to avoid being swarmed by merchants. Sometimes they will pull open car windows and throw items inside before demanding you pay for them. Use the phrase "Sitaki. Asante," which means "I don't want anything. Thank you."</p>
-
 			<h3>Things to Do in Nairobi</h3>
 			<p>In addition to great food, Nairobi has plenty of other fun adventure spots. Here is an incomplete list of my favorites:</p>
 			<ul>
@@ -516,6 +502,34 @@
 			</ul>
 
 			<p>Note that, in some towns, rideshare apps have low adoption, so be prepared to pay extra for taxis.</p>
+		</section>
+
+		<section id="Safaris">
+			<h2>Safaris</h2>
+
+			<h3>Basics</h3>
+			<p>In Kiswahili, "safari" literally means "journey" or "trip." I would recommend using a tour company to plan everything. My favorites are <a rel="external" target="_blank" href="https://expeditionsmaasaisafaris.com/">Expeditions</a> and <a rel="external" target="_blank" href="https://bonfireadventures.com/">Bonfire</a>. These are the important variables:</p>
+			<ul>
+				<li><b>Park:</b> The Maasai Mara is the most popular and generally the best option if your goal is to see the most animals, but many other parks are also great, including Amboseli, Naivasha, and Nakuru. Nairobi National Park is also a great budget option.</li>
+				<li><b>Guests:</b> The number, age, and nationality of guests affect the price. Safari vans can comfortably seat up to seven passengers plus the driver. Kids' tickets are typically cheaper than adults'. Kenyan residents pay significantly less than foreigners for both the park entrance fees and hotel. However, if you have at least one resident in your party, you can usually get the hotel to extend the resident rate to everyone in the party.</li>
+				<li><b>Vehicle:</b> You can get a regular car, an open-roof safari van, or a Land Cruiser. I prefer the open-roof safari vans because the open roof makes the experience way better and Land Cruisers are needlessly expensive.</li>
+				<li><b>Transportation from Nairobi:</b> You can take public transport, like matatus, to and from the park or pay extra to be picked up in your safari car at your residence in Nairobi and driven to the park. Some particularly wealthy people fly, but they still need a car to pick them up at the arrival airstrip.</li>
+				<li><b>Group vs. Private:</b> Private safaris cost more than joining a group, but the benefit of privacy is that you get to decide how long you want to stay and look at a particular animal rather than negotiating the schedule with other passengers. Sometimes, safarigoers get tunnel vision trying to see the Big Five. Don't get sucked into this. It can be nice to stay and watch the cheetahs for an hour to see if they take off on a hunt. Many residents self-drive, but doing so means you likely won't have access to radio communication with all of the professional drivers in the park constantly telling each other where the animals are.</li>
+				<li><b>Accommodation Location:</b> Some camps are inside the parks, while others are located outside. Camps inside the park are more expensive, but you save time by not having to check in at the entrance gate every day. For some parks, like the Maasai Mara, you may wait at the gate for up to 45 minutes. For others, like Amboseli, checking in will likely take five minutes.</li>
+				<li><b>Accommodation Type:</b> There are generally three types of safari accommodations: regular tents, safari tents, and lodges, in increasing order of expense. Safari tents are my favorite; they are basically hotel rooms, complete with hot running water and electricity, but the walls are made of canvas instead of brick. All the safaris on which I've been provide nice meals and drinking water for free, but they overcharge for other drinks.</li>
+				<li><b>Number of Nights:</b> Most people go on safari for two to three nights. Unless you're going to Nairobi National Park, don't try to make your safari a one-day trip. You'll be exhausted, and you'll spend much of your time traveling to and from the park rather than enjoying the animals. If seeing a hunt or a particularly rare animal is important to you, you should plan to stay for a week or more.</li>
+			</ul>
+
+			<p>In addition to the quoted price, make sure to budget for <a rel="external" target="_blank" href="https://kws.go.ke/content/kws-charges">park entry fees</a>, drinks, snacks that you'll bring with you from Nairobi, souvenirs, and 10% for tips. If you don't want souvenirs, close and lock your car windows as you approach the gate to avoid being swarmed by merchants. Sometimes they will pull open car windows and throw items inside before demanding you pay for them. Use the phrase "Sitaki. Asante," which means "I don't want anything. Thank you."</p>
+
+			<h3>Parks</h3>
+			<p>I have visited four safari parks in Kenya:</p>
+			<ul>
+				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Maasai_Mara">Maasai Mara</a></b> is arguably the most famous park in Kenya. It's name comes from the Maa word for "spotted," a reference to the short trees that cover the park. The Mara is located on the southern border of Kenya, directly connected to the Serengeti in Tanzania. The park hosts the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Serengeti#Great_migration">Great Migration</a>, one of the Wonders of the World, annually. Upside: in my opinion, the Maasai Mara is the best park for spotting game. Downside: due to its popularity, it can get a little crowded, and the park rangers fail to stop the safari drivers from going off road.</li>
+				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Amboseli_National_Park">Amboseli</a></b> is another Maasai park on Kenya's southern border. The name is a corruption of the Maasai word for "salty, dusty place." Upside: Amboseli is famous for its "tuskers," elephants with massive tusks, and its views of Mount Kilimanjaro are breathtaking. Downside: none.</li>
+				<li><b>Naivasha and Nakuru</b> offer two parks in one trip. Travel from Nairobi to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Hell%27s_Gate_National_Park">Hell's Gate</a> for a game drive on day one, then stay near <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Naivasha">Lake Naivasha</a>. On the second day, travel to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Nakuru#Lake_Nakuru_National_Park">Lake Nakuru</a> for the rest of your safari. Upside: the lakes are beautiful. Downside: there's less diversity of animals, and no elephants in either park.</li>
+				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Nairobi_National_Park">Nairobi National Park</a></b> is located in Nairobi, about 7 km south of the city center. Upside: it's budget-friendly and is the only park you can comfortably visit from Nairobi in less than one day, and it still has an impressive quantity of wildlife. Downside: it's smaller than most of the other safari parks and doesn't have elephants.</li>
+			</ul>
 		</section>
 	</main>
 	
