--- a/service.html
+++ b/service.html
@@ -67,7 +67,7 @@
 
 			<p>Our students performed phenomenal work and several of them have continued their projects with hopes of collecting more data and presenting at a national science fair. As scientists, we wield powerful tools to which most people do not have access. It is therefore our responsibility to use those tools to benefit our communities.</p>
 
-			<p>Links: <a rel="external" href="https://www.clubesdeciencia.mx/" target="_blank">Clubes de Ciencia México</a>, <a rel="external" href="https://spacemonkeyr.wordpress.com/" target="_blank">Rodrigo Gamboa Torres</a></p>
+			<p>Learn more about <a rel="external" href="https://www.clubesdeciencia.mx/" target="_blank">Clubes de Ciencia México</a> and my co-instructor, <a rel="external" href="https://spacemonkeyr.wordpress.com/" target="_blank">Rodrigo Gamboa Torres</a>, on their websites.</p>
 		</section>
 	</main>
 
