--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -307,7 +307,7 @@
 				<li>When texting or calling, always start with a pleasantry like "How are you?" and wait for a response. "There is no hurry in Africa," so take a minute to exchange greetings before getting to the point.</li>
 				<li>After you summon a ride using a rideshare app, it is common for the driver to call you to ask where you are and where you're going despite the fact that they already have all of that information on their phones. You can use the following script for these conversations: "Hello. I'm at [your location]. I'm going to [your destination]. Are you coming?"</li>
 				<li>Phone calls here end like they do in the movies, where somebody just decides that it's done and hangs up without saying goodbye.</li>
-				<li>Tipping is only common in nice restaurants or in the tourism industry, and the standard rate is 10%.</li>
+				<li>Tipping is only common in nice restaurants and in the tourism industry, and the standard rate is 10%.</li>
 				<li>Respect for elders is highly valued in Kenyan culture. It is customary to greet and show deference to older individuals by using the appropriate titles, such as "Mzee" for older men and "Mama" for older women.</li>
 				<li>It is common for social gatherings or meetings to start later than scheduled, sometimes by an hour or more.</li>
 				<li>Nairobi has a diverse range of styles and dress codes, influenced by both traditional and modern fashion. Start by dressing modestly and find your own style. For men, I recommend buying canvas pants to stay cool without showing your legs.</li>
